# unitn-sistemi-operativi

./: Input.c  Input.h  Makefile  README.md  README.txt  commands.json  makefile  solver.c  test.c  test.out  test.sh
Queue/: main_test.c  queue.c  queue.h
R/: R  R.c  R_functions.c  R_functions.h  R_functions_final.c  R_functions_final.h  c  input  input.c  prova  prova.c
R/FINAL/: R_functions_final.c  R_functions_final.h  communication.c
analyser/: analyser.c  analyser.h
code_generator/: main.py
code_generator/templates/: sh_handle_command.template.txt
colour/: colour.h
final/: report_creator.c
general/: general.h
libs/colour/: test.c
libs/communication/: communication.c  communication.h
libs/communications/: communications.c  communications.h
libs/forking/: forking.c  forking.h
libs/general/: general.c  general.h
libs/logger/: test.c
libs/process/: process.c  process.h
libs/shell_utils/: shell_utils.c  shell_utils.h
libs/text/: test.c  text.c  text.h
libs/util/: util.c  util.h
new/shell_generator/: main.py
old/R/: R  (+6 more)
old_base/: CMakeLists.txt
prova1/: prova1.txt  prova10.txt  prova2.txt  prova3.txt  prova4.txt  prova5.txt  prova6.txt  prova7.txt  prova8.txt  prova9.txt
prova_makefile/: main.c
prova_q/: q.c  test.sh
prova_shell/: a.out  comands.json  commands.json  generate_shell.py  main.c  result.c
shell/: commands.json  test.c  test.out  test.sh
shell_generator/: commands.txt  main.py
shell_utils/: shell_utils.c
test/: CMakeLists.txt  shell.c
test/Solver/: A.c  C.c  CMakeLists.txt  P.c
text/: text.c  text.h
(+117 files in other folders)
